Update XAMPP-like environment: remove phpMyAdmin proxy configuration, add port 8080 for phpMyAdmin, and update documentation links

--- a/welcome.html
+++ b/welcome.html
@@ -131,7 +131,7 @@
                 <p><span class="status">Active</span></p>
                 <p>MySQL 8.0+ with sample data</p>
                 <a href="test-db.php" class="btn" target="_blank">Test Connection</a>
-                <a href="/phpmyadmin" class="btn" target="_blank">phpMyAdmin</a>
+                <a href="http://localhost:8080" class="btn" target="_blank">phpMyAdmin</a>
             </div>
             
             <div class="service">
